predicate implementation, and fix timestamp based  filtering